<resources>
    <string name="app_name">Activity Planner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plan_detail_suffix">Activities:</string>
    <string name="notification_title">Plan Reminder</string>
    <string name="notification_text">This is alarm notification</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Activity Planner</string>
    <string name="nav_header_subtitle">Lets plan your activities here</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_plan">Plan</string>
    <string name="menu_news">News</string>
    <string name="menu_about">About</string>
    <string name="text_title_plan_detail">Plan Details</string>
    <string name="hint_plan_title">Plan title</string>
    <string name="hint_plan_description">Plan description</string>
    <string name="plan_title">Title:</string>
    <string name="plan_description">Description:</string>
    <string name="auto_new_plan_title">New Plan</string>
    <string name="empty_plan_title">[Unnamed Plan]</string>
    <string name="text_delete">Delete</string>
    <string name="text_okay">Okay</string>
    <string name="reminder">Reminder:</string>
    <string name="set_datetime">Set Datetime</string>
    <string name="not_set">Not set</string>
    <string name="cancel">Cancel</string>
    <string name="need_internet_connection">You need internet connection for this app. Please turn on mobile network or Wi-Fi in Settings.</string>
    <string name="no_connection">Unable to connect</string>
    <string name="settings">Settings</string>
    <string name="about_me">About Me</string>
    <string name="play_ringtone_credit">Play Ringtone Credit</string>
    <string name="stop_ringtone_credit">Stop Ringtone Credit</string>
    <string name="see_pyramid">See Pyramid</string>
    <string name="is_prime">Is Prime?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>