<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_plan">

    <fragment
        android:id="@+id/nav_plan"
        android:name="id.ac.ui.cs.mobileprogramming.mohammad_adli.activityplanner.ui.plan.PlanFragment"
        android:label="@string/menu_plan"
        tools:layout="@layout/fragment_plan" />

    <fragment
        android:id="@+id/nav_news"
        android:name="id.ac.ui.cs.mobileprogramming.mohammad_adli.activityplanner.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_about"
        android:name="id.ac.ui.cs.mobileprogramming.mohammad_adli.activityplanner.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_pyramid"
        android:name="id.ac.ui.cs.mobileprogramming.mohammad_adli.activityplanner.ui.about.PyramidFragment"
        android:label="@string/see_pyramid"
        tools:layout="@layout/fragment_pyramid" />
</navigation>